--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,5 +1,24 @@
-@media only screen and (min-width:640px){
-    
+@media only screen and (max-width:37.5em){
+    .navigation {
+        display: none;
+      }
+      .navigation li a {
+        font-size: 1.5em;
+        margin: 10px 0;
+        display: inline-block;
+      }
+      .navigation.active {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 50%;
+        background: aqua;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
         nav ul {
             display: flex;
         }
@@ -15,4 +34,45 @@
     .parent section{
         box-shadow: 1px 1px 10px black;
     }
+    
+    .toggle {
+        position: relative;
+        width: 32px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 100000;
+        cursor: pointer;
+      }
+      .toggle::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background: #0d0c0c;
+        transform: translateY(-10px);
+        box-shadow: 0 10px 0 #0d0c0c;
+        transition: 0.25s;
+      }
+      .toggle::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background: #0d0c0c;
+        transform: translateY(10px);
+        transition: 0.25s;
+      }
+      .toggle.active {
+        position: fixed;
+        right: 40px;
+      }
+      .toggle.active::before {
+        transform: translateY(0px) rotate(45deg);
+        box-shadow: 0 0 0 #fff;
+      }
+      .toggle.active::after {
+        transform: translateY(0px) rotate(-45deg);
+      }
 }
